--- a/carrinho.html
+++ b/carrinho.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="carrinho.css" />
 
     <script src="produtos.js" defer></script>
+    <script src="carrinho.js" defer></script>
     <title>Holandes Voador Webstore</title>
   </head>
   <body>
@@ -17,5 +19,20 @@
       <img src="./icons/logo.svg" alt="logo" class="logo" />
       <h1 class="title">Flying Dutchman</h1>
     </header>
+    <main class="cart-page">
+      <div class="cart-label">
+        <h3>Item</h3>
+        <h3>Preço</h3>
+      </div>
+      <div id="cart" class="cart-container"></div>
+      <div class="cart-label">
+        <h3>Total :</h3>
+        <h3 id="total">R$ 199.00</h3>
+      </div>
+      <div class="button-container">
+        <button class="button secondary">Cancelar</button>
+        <button class="button primary">Comprar</button>
+      </div>
+    </main>
   </body>
 </html>
