pagina de detalhe de produto adicionada

--- a/carrinho.html
+++ b/carrinho.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="./icons/logo.svg" alt="logo" class="logo" />
+      <a href="./index.html"><img src="./icons/logo.svg" alt="logo" class="logo" /></a>
       <h1 class="title">Flying Dutchman</h1>
     </header>
     <main class="cart-page">
